@@ -1682,6 +1682,8 @@ ConfigView.section.interface.cleardecisions=Clear remembered dialog decisions
 ConfigView.section.interface.cleardecisionsbutton=Clear
 ConfigView.section.interface.cleartrackers=Clear remembered trackers
 ConfigView.section.interface.cleartrackersbutton=Clear
+ConfigView.section.interface.clearsavepaths=Clear remembered save paths
+ConfigView.section.interface.clearsavepathsbutton=Clear
 
 configureWizard.welcome.usermodes=This User Proficiency setting will determine the level of the options displayed in Tools > Options. It is in your best interest to set it properly.
 
